--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/SettingScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/SettingScreen.storyboard
@@ -67,6 +67,7 @@
                         <segue destination="ZMR-T8-rbB" kind="unwind" identifier="logOut" unwindAction="unwindToMainViewControllerWithUnwindSegue:" id="qu7-I9-tiZ"/>
                         <segue destination="zcI-xC-WBY" kind="show" identifier="ChangePassword" id="PBv-I3-FHb"/>
                         <segue destination="n6U-Yr-1N4" kind="show" identifier="Inqury" id="fEv-gV-l2x"/>
+                        <segue destination="0eu-4O-h42" kind="show" identifier="license" id="H3a-qx-aAj"/>
                     </connections>
                 </tableViewController>
                 <exit id="ZMR-T8-rbB" userLabel="Exit" sceneMemberID="exit"/>
@@ -107,7 +108,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TVY-j1-pjK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1864" y="1124"/>
+            <point key="canvasLocation" x="1864" y="1422"/>
+        </scene>
+        <!--License View Controller-->
+        <scene sceneID="6pb-1B-ieN">
+            <objects>
+                <viewController id="0eu-4O-h42" customClass="LicenseViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WYq-ud-51O">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YP-Zg-dSW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="EaQ-2z-IsL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EaQ-2z-IsL" firstAttribute="trailing" secondItem="8YP-Zg-dSW" secondAttribute="trailing" id="1aN-Ws-pEb"/>
+                            <constraint firstItem="EaQ-2z-IsL" firstAttribute="bottom" secondItem="8YP-Zg-dSW" secondAttribute="bottom" id="1yr-ZS-gvf"/>
+                            <constraint firstItem="8YP-Zg-dSW" firstAttribute="leading" secondItem="EaQ-2z-IsL" secondAttribute="leading" id="ML3-m7-I54"/>
+                            <constraint firstItem="8YP-Zg-dSW" firstAttribute="top" secondItem="EaQ-2z-IsL" secondAttribute="top" id="fgb-EK-4nw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="8RL-ch-cLH"/>
+                    <connections>
+                        <outlet property="licenseWebView" destination="8YP-Zg-dSW" id="6bD-cq-IH3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y0R-sa-ZGY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1864" y="735"/>
         </scene>
         <!--Reset Password View Controller-->
         <scene sceneID="0C6-tc-cKM">
@@ -177,7 +213,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CPs-rk-KDh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1864" y="1783"/>
+            <point key="canvasLocation" x="1864" y="2157"/>
         </scene>
     </scenes>
     <resources>
